# tuiless

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
skills/tuiless/: SKILL.md
skills/tuiless/agents/: openai.yaml
skills/tuiless/references/: basic-usage.md  best-practices.md  detailed-documentation.md
src/: app.rs  attach.rs  cli.rs  ipc.rs  main.rs  protocol.rs  registry.rs  runtime.rs  screen.rs  session.rs  winpty.rs
