[package]
name = "tuiless"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.28.1"
hex = "0.4.3"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.52.1", features = ["full"] }
vt100 = "0.16.2"
